Changed hospital_number to categorical

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,6 +348,24 @@
     "# Finding null/na values if there are any\n",
     "null_vals = train_data.isna().sum().sort_values(ascending=False)\n",
     "null_vals.head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the missing columns are categorical, so we can use imputation to fill missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hospital number is categorical even though represented as a integer, below corrects this\n",
+    "train_data['hospital_number'] = train_data['hospital_number'].astype('object')\n",
+    "test_data['hospital_number'] = test_data['hospital_number'].astype('object')"
    ]
   }
  ],
