Scaler for numeric features

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\") \n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "\n",
     "# Input data files are available in the read-only \"../input/\" directory\n",
     "# For example, running this will list all files under the input directory\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +250,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +341,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,13 +361,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hospital number is categorical even though represented as a integer, below corrects this\n",
     "train_data['hospital_number'] = train_data['hospital_number'].astype('object')\n",
     "test_data['hospital_number'] = test_data['hospital_number'].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaler for numerical data\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "object_columns = train_data.select_dtypes(include=['object'])\n",
+    "number_columns = train_data.select_dtypes(exclude=['object'])\n",
+    "train_data.loc[:,list(number_columns.columns)] = scaler.fit_transform(train_data.loc[:,list(number_columns.columns)])\n",
+    "test_data.loc[:,list(number_columns.columns)] = scaler.transform(test_data.loc[:,list(number_columns.columns)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hospital_number</th>\n",
+       "      <th>rectal_temp</th>\n",
+       "      <th>pulse</th>\n",
+       "      <th>respiratory_rate</th>\n",
+       "      <th>temp_of_extremities</th>\n",
+       "      <th>peripheral_pulse</th>\n",
+       "      <th>mucous_membrane</th>\n",
+       "      <th>...</th>\n",
+       "      <th>packed_cell_volume</th>\n",
+       "      <th>total_protein</th>\n",
+       "      <th>abdomo_appearance</th>\n",
+       "      <th>abdomo_protein</th>\n",
+       "      <th>surgical_lesion</th>\n",
+       "      <th>lesion_1</th>\n",
+       "      <th>lesion_2</th>\n",
+       "      <th>lesion_3</th>\n",
+       "      <th>cp_data</th>\n",
+       "      <th>outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.730649</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>530001</td>\n",
+       "      <td>-0.129621</td>\n",
+       "      <td>1.801773</td>\n",
+       "      <td>-0.368142</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>dark_cyanotic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.702421</td>\n",
+       "      <td>-0.483319</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>0.068659</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>-0.298737</td>\n",
+       "      <td>-0.075465</td>\n",
+       "      <td>-0.040275</td>\n",
+       "      <td>no</td>\n",
+       "      <td>died</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.727844</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>533836</td>\n",
+       "      <td>-0.890705</td>\n",
+       "      <td>0.289582</td>\n",
+       "      <td>-1.097830</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>pale_cyanotic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.576449</td>\n",
+       "      <td>1.598010</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>-0.812647</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>-0.298921</td>\n",
+       "      <td>-0.075465</td>\n",
+       "      <td>-0.040275</td>\n",
+       "      <td>no</td>\n",
+       "      <td>euthanized</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.725039</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>529812</td>\n",
+       "      <td>0.124074</td>\n",
+       "      <td>1.389357</td>\n",
+       "      <td>-0.124913</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_pink</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.196638</td>\n",
+       "      <td>-0.562072</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>0.068659</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>0.237648</td>\n",
+       "      <td>-0.075465</td>\n",
+       "      <td>-0.040275</td>\n",
+       "      <td>no</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.722234</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>5262541</td>\n",
+       "      <td>-1.398095</td>\n",
+       "      <td>-0.260306</td>\n",
+       "      <td>-0.003299</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_pink</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.322609</td>\n",
+       "      <td>-0.539571</td>\n",
+       "      <td>cloudy</td>\n",
+       "      <td>0.383411</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>-0.298921</td>\n",
+       "      <td>-0.075465</td>\n",
+       "      <td>-0.040275</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.719429</td>\n",
+       "      <td>no</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>5299629</td>\n",
+       "      <td>-0.256468</td>\n",
+       "      <td>-0.947666</td>\n",
+       "      <td>1.091232</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>normal_pink</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.247108</td>\n",
+       "      <td>-0.528321</td>\n",
+       "      <td>cloudy</td>\n",
+       "      <td>-0.434944</td>\n",
+       "      <td>no</td>\n",
+       "      <td>-0.705212</td>\n",
+       "      <td>-0.075465</td>\n",
+       "      <td>-0.040275</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id surgery    age hospital_number  rectal_temp     pulse  \\\n",
+       "0 -1.730649     yes  adult          530001    -0.129621  1.801773   \n",
+       "1 -1.727844     yes  adult          533836    -0.890705  0.289582   \n",
+       "2 -1.725039     yes  adult          529812     0.124074  1.389357   \n",
+       "3 -1.722234     yes  adult         5262541    -1.398095 -0.260306   \n",
+       "4 -1.719429      no  adult         5299629    -0.256468 -0.947666   \n",
+       "\n",
+       "   respiratory_rate temp_of_extremities peripheral_pulse mucous_membrane  ...  \\\n",
+       "0         -0.368142                cool          reduced   dark_cyanotic  ...   \n",
+       "1         -1.097830                cool           normal   pale_cyanotic  ...   \n",
+       "2         -0.124913                cool          reduced       pale_pink  ...   \n",
+       "3         -0.003299                cold          reduced       pale_pink  ...   \n",
+       "4          1.091232              normal           normal     normal_pink  ...   \n",
+       "\n",
+       "  packed_cell_volume total_protein abdomo_appearance abdomo_protein  \\\n",
+       "0           0.702421     -0.483319     serosanguious       0.068659   \n",
+       "1          -1.576449      1.598010     serosanguious      -0.812647   \n",
+       "2          -1.196638     -0.562072     serosanguious       0.068659   \n",
+       "3           0.322609     -0.539571            cloudy       0.383411   \n",
+       "4          -0.247108     -0.528321            cloudy      -0.434944   \n",
+       "\n",
+       "  surgical_lesion  lesion_1  lesion_2  lesion_3 cp_data     outcome  \n",
+       "0             yes -0.298737 -0.075465 -0.040275      no        died  \n",
+       "1             yes -0.298921 -0.075465 -0.040275      no  euthanized  \n",
+       "2             yes  0.237648 -0.075465 -0.040275      no       lived  \n",
+       "3             yes -0.298921 -0.075465 -0.040275     yes       lived  \n",
+       "4              no -0.705212 -0.075465 -0.040275     yes       lived  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.head()"
    ]
   }
  ],
