Dropped ID column

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>surgery</th>\n",
        "      <th>age</th>\n",
        "      <th>hospital_number</th>\n",
@@ -79,6 +78,7 @@
        "      <th>temp_of_extremities</th>\n",
        "      <th>peripheral_pulse</th>\n",
        "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
        "      <th>...</th>\n",
        "      <th>packed_cell_volume</th>\n",
        "      <th>total_protein</th>\n",
@@ -95,7 +95,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>530001</td>\n",
@@ -105,6 +104,7 @@
        "      <td>cool</td>\n",
        "      <td>reduced</td>\n",
        "      <td>dark_cyanotic</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>57.0</td>\n",
        "      <td>8.5</td>\n",
@@ -119,7 +119,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>533836</td>\n",
@@ -129,6 +128,7 @@
        "      <td>cool</td>\n",
        "      <td>normal</td>\n",
        "      <td>pale_cyanotic</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>33.0</td>\n",
        "      <td>64.0</td>\n",
@@ -143,7 +143,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>529812</td>\n",
@@ -153,6 +152,7 @@
        "      <td>cool</td>\n",
        "      <td>reduced</td>\n",
        "      <td>pale_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>37.0</td>\n",
        "      <td>6.4</td>\n",
@@ -167,7 +167,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>5262541</td>\n",
@@ -177,6 +176,7 @@
        "      <td>cold</td>\n",
        "      <td>reduced</td>\n",
        "      <td>pale_pink</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>53.0</td>\n",
        "      <td>7.0</td>\n",
@@ -191,7 +191,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>no</td>\n",
        "      <td>adult</td>\n",
        "      <td>5299629</td>\n",
@@ -201,6 +200,7 @@
        "      <td>normal</td>\n",
        "      <td>normal</td>\n",
        "      <td>normal_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>47.0</td>\n",
        "      <td>7.3</td>\n",
@@ -215,49 +215,51 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id surgery    age  hospital_number  rectal_temp  pulse  respiratory_rate  \\\n",
-       "0   0     yes  adult           530001         38.1    132                24   \n",
-       "1   1     yes  adult           533836         37.5     88                12   \n",
-       "2   2     yes  adult           529812         38.3    120                28   \n",
-       "3   3     yes  adult          5262541         37.1     72                30   \n",
-       "4   4      no  adult          5299629         38.0     52                48   \n",
+       "  surgery    age  hospital_number  rectal_temp  pulse  respiratory_rate  \\\n",
+       "0     yes  adult           530001         38.1    132                24   \n",
+       "1     yes  adult           533836         37.5     88                12   \n",
+       "2     yes  adult           529812         38.3    120                28   \n",
+       "3     yes  adult          5262541         37.1     72                30   \n",
+       "4      no  adult          5299629         38.0     52                48   \n",
        "\n",
-       "  temp_of_extremities peripheral_pulse mucous_membrane  ...  \\\n",
-       "0                cool          reduced   dark_cyanotic  ...   \n",
-       "1                cool           normal   pale_cyanotic  ...   \n",
-       "2                cool          reduced       pale_pink  ...   \n",
-       "3                cold          reduced       pale_pink  ...   \n",
-       "4              normal           normal     normal_pink  ...   \n",
+       "  temp_of_extremities peripheral_pulse mucous_membrane capillary_refill_time  \\\n",
+       "0                cool          reduced   dark_cyanotic            more_3_sec   \n",
+       "1                cool           normal   pale_cyanotic            more_3_sec   \n",
+       "2                cool          reduced       pale_pink            less_3_sec   \n",
+       "3                cold          reduced       pale_pink            more_3_sec   \n",
+       "4              normal           normal     normal_pink            less_3_sec   \n",
        "\n",
-       "  packed_cell_volume total_protein abdomo_appearance abdomo_protein  \\\n",
-       "0               57.0           8.5     serosanguious            3.4   \n",
-       "1               33.0          64.0     serosanguious            2.0   \n",
-       "2               37.0           6.4     serosanguious            3.4   \n",
-       "3               53.0           7.0            cloudy            3.9   \n",
-       "4               47.0           7.3            cloudy            2.6   \n",
+       "   ... packed_cell_volume total_protein abdomo_appearance abdomo_protein  \\\n",
+       "0  ...               57.0           8.5     serosanguious            3.4   \n",
+       "1  ...               33.0          64.0     serosanguious            2.0   \n",
+       "2  ...               37.0           6.4     serosanguious            3.4   \n",
+       "3  ...               53.0           7.0            cloudy            3.9   \n",
+       "4  ...               47.0           7.3            cloudy            2.6   \n",
        "\n",
-       "  surgical_lesion lesion_1  lesion_2 lesion_3 cp_data     outcome  \n",
-       "0             yes     2209         0        0      no        died  \n",
-       "1             yes     2208         0        0      no  euthanized  \n",
-       "2             yes     5124         0        0      no       lived  \n",
-       "3             yes     2208         0        0     yes       lived  \n",
-       "4              no        0         0        0     yes       lived  \n",
+       "  surgical_lesion  lesion_1 lesion_2 lesion_3  cp_data     outcome  \n",
+       "0             yes      2209        0        0       no        died  \n",
+       "1             yes      2208        0        0       no  euthanized  \n",
+       "2             yes      5124        0        0       no       lived  \n",
+       "3             yes      2208        0        0      yes       lived  \n",
+       "4              no         0        0        0      yes       lived  \n",
        "\n",
-       "[5 rows x 29 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv(\"train.csv\")\n",
+    "train_data.drop('id', axis=1, inplace=True)\n",
     "test_data = pd.read_csv(\"test.csv\")\n",
+    "test_data.drop('id', axis=1, inplace=True)\n",
     "train_data.head()"
    ]
   },
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,27 +323,26 @@
        "mucous_membrane           21\n",
        "peristalsis               20\n",
        "capillary_refill_time      6\n",
-       "lesion_2                   0\n",
-       "lesion_1                   0\n",
-       "surgical_lesion            0\n",
        "total_protein              0\n",
-       "lesion_3                   0\n",
+       "lesion_1                   0\n",
+       "lesion_2                   0\n",
+       "surgical_lesion            0\n",
        "abdomo_protein             0\n",
+       "lesion_3                   0\n",
        "cp_data                    0\n",
-       "id                         0\n",
+       "surgery                    0\n",
        "packed_cell_volume         0\n",
        "nasogastric_reflux_ph      0\n",
-       "surgery                    0\n",
+       "age                        0\n",
        "respiratory_rate           0\n",
        "pulse                      0\n",
        "rectal_temp                0\n",
        "hospital_number            0\n",
-       "age                        0\n",
        "outcome                    0\n",
        "dtype: int64>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>surgery</th>\n",
        "      <th>age</th>\n",
        "      <th>hospital_number</th>\n",
@@ -421,6 +421,7 @@
        "      <th>temp_of_extremities</th>\n",
        "      <th>peripheral_pulse</th>\n",
        "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
        "      <th>...</th>\n",
        "      <th>packed_cell_volume</th>\n",
        "      <th>total_protein</th>\n",
@@ -437,7 +438,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.730649</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>530001</td>\n",
@@ -447,6 +447,7 @@
        "      <td>cool</td>\n",
        "      <td>reduced</td>\n",
        "      <td>dark_cyanotic</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>0.702421</td>\n",
        "      <td>-0.483319</td>\n",
@@ -461,7 +462,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.727844</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>533836</td>\n",
@@ -471,6 +471,7 @@
        "      <td>cool</td>\n",
        "      <td>normal</td>\n",
        "      <td>pale_cyanotic</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>-1.576449</td>\n",
        "      <td>1.598010</td>\n",
@@ -485,7 +486,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.725039</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>529812</td>\n",
@@ -495,6 +495,7 @@
        "      <td>cool</td>\n",
        "      <td>reduced</td>\n",
        "      <td>pale_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>-1.196638</td>\n",
        "      <td>-0.562072</td>\n",
@@ -509,7 +510,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-1.722234</td>\n",
        "      <td>yes</td>\n",
        "      <td>adult</td>\n",
        "      <td>5262541</td>\n",
@@ -519,6 +519,7 @@
        "      <td>cold</td>\n",
        "      <td>reduced</td>\n",
        "      <td>pale_pink</td>\n",
+       "      <td>more_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>0.322609</td>\n",
        "      <td>-0.539571</td>\n",
@@ -533,7 +534,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-1.719429</td>\n",
        "      <td>no</td>\n",
        "      <td>adult</td>\n",
        "      <td>5299629</td>\n",
@@ -543,6 +543,7 @@
        "      <td>normal</td>\n",
        "      <td>normal</td>\n",
        "      <td>normal_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
        "      <td>...</td>\n",
        "      <td>-0.247108</td>\n",
        "      <td>-0.528321</td>\n",
@@ -557,42 +558,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         id surgery    age hospital_number  rectal_temp     pulse  \\\n",
-       "0 -1.730649     yes  adult          530001    -0.129621  1.801773   \n",
-       "1 -1.727844     yes  adult          533836    -0.890705  0.289582   \n",
-       "2 -1.725039     yes  adult          529812     0.124074  1.389357   \n",
-       "3 -1.722234     yes  adult         5262541    -1.398095 -0.260306   \n",
-       "4 -1.719429      no  adult         5299629    -0.256468 -0.947666   \n",
+       "  surgery    age hospital_number  rectal_temp     pulse  respiratory_rate  \\\n",
+       "0     yes  adult          530001    -0.129621  1.801773         -0.368142   \n",
+       "1     yes  adult          533836    -0.890705  0.289582         -1.097830   \n",
+       "2     yes  adult          529812     0.124074  1.389357         -0.124913   \n",
+       "3     yes  adult         5262541    -1.398095 -0.260306         -0.003299   \n",
+       "4      no  adult         5299629    -0.256468 -0.947666          1.091232   \n",
        "\n",
-       "   respiratory_rate temp_of_extremities peripheral_pulse mucous_membrane  ...  \\\n",
-       "0         -0.368142                cool          reduced   dark_cyanotic  ...   \n",
-       "1         -1.097830                cool           normal   pale_cyanotic  ...   \n",
-       "2         -0.124913                cool          reduced       pale_pink  ...   \n",
-       "3         -0.003299                cold          reduced       pale_pink  ...   \n",
-       "4          1.091232              normal           normal     normal_pink  ...   \n",
+       "  temp_of_extremities peripheral_pulse mucous_membrane capillary_refill_time  \\\n",
+       "0                cool          reduced   dark_cyanotic            more_3_sec   \n",
+       "1                cool           normal   pale_cyanotic            more_3_sec   \n",
+       "2                cool          reduced       pale_pink            less_3_sec   \n",
+       "3                cold          reduced       pale_pink            more_3_sec   \n",
+       "4              normal           normal     normal_pink            less_3_sec   \n",
        "\n",
-       "  packed_cell_volume total_protein abdomo_appearance abdomo_protein  \\\n",
-       "0           0.702421     -0.483319     serosanguious       0.068659   \n",
-       "1          -1.576449      1.598010     serosanguious      -0.812647   \n",
-       "2          -1.196638     -0.562072     serosanguious       0.068659   \n",
-       "3           0.322609     -0.539571            cloudy       0.383411   \n",
-       "4          -0.247108     -0.528321            cloudy      -0.434944   \n",
+       "   ... packed_cell_volume total_protein abdomo_appearance abdomo_protein  \\\n",
+       "0  ...           0.702421     -0.483319     serosanguious       0.068659   \n",
+       "1  ...          -1.576449      1.598010     serosanguious      -0.812647   \n",
+       "2  ...          -1.196638     -0.562072     serosanguious       0.068659   \n",
+       "3  ...           0.322609     -0.539571            cloudy       0.383411   \n",
+       "4  ...          -0.247108     -0.528321            cloudy      -0.434944   \n",
        "\n",
-       "  surgical_lesion  lesion_1  lesion_2  lesion_3 cp_data     outcome  \n",
-       "0             yes -0.298737 -0.075465 -0.040275      no        died  \n",
-       "1             yes -0.298921 -0.075465 -0.040275      no  euthanized  \n",
-       "2             yes  0.237648 -0.075465 -0.040275      no       lived  \n",
-       "3             yes -0.298921 -0.075465 -0.040275     yes       lived  \n",
-       "4              no -0.705212 -0.075465 -0.040275     yes       lived  \n",
+       "  surgical_lesion  lesion_1  lesion_2  lesion_3  cp_data     outcome  \n",
+       "0             yes -0.298737 -0.075465 -0.040275       no        died  \n",
+       "1             yes -0.298921 -0.075465 -0.040275       no  euthanized  \n",
+       "2             yes  0.237648 -0.075465 -0.040275       no       lived  \n",
+       "3             yes -0.298921 -0.075465 -0.040275      yes       lived  \n",
+       "4              no -0.705212 -0.075465 -0.040275      yes       lived  \n",
        "\n",
-       "[5 rows x 29 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
