--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
    "source": [
     "# Finding null/na values if there are any\n",
     "null_vals = train_data.isna().sum().sort_values(ascending=False)\n",
-    "null_vals.head"
+    "null_vals.head\n"
    ]
   },
   {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -593,13 +593,240 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hospital_number</th>\n",
+       "      <th>temp_of_extremities</th>\n",
+       "      <th>peripheral_pulse</th>\n",
+       "      <th>mucous_membrane</th>\n",
+       "      <th>capillary_refill_time</th>\n",
+       "      <th>pain</th>\n",
+       "      <th>peristalsis</th>\n",
+       "      <th>abdominal_distention</th>\n",
+       "      <th>nasogastric_tube</th>\n",
+       "      <th>nasogastric_reflux</th>\n",
+       "      <th>rectal_exam_feces</th>\n",
+       "      <th>abdomen</th>\n",
+       "      <th>abdomo_appearance</th>\n",
+       "      <th>surgical_lesion</th>\n",
+       "      <th>cp_data</th>\n",
+       "      <th>outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>1175</td>\n",
+       "      <td>1214</td>\n",
+       "      <td>1229</td>\n",
+       "      <td>1191</td>\n",
+       "      <td>1215</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>880</td>\n",
+       "      <td>883</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>1187</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>1235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>255</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>yes</td>\n",
+       "      <td>adult</td>\n",
+       "      <td>529461</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>pale_pink</td>\n",
+       "      <td>less_3_sec</td>\n",
+       "      <td>depressed</td>\n",
+       "      <td>hypomotile</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>slight</td>\n",
+       "      <td>more_1_liter</td>\n",
+       "      <td>absent</td>\n",
+       "      <td>distend_small</td>\n",
+       "      <td>serosanguious</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>lived</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>887</td>\n",
+       "      <td>1160</td>\n",
+       "      <td>46</td>\n",
+       "      <td>700</td>\n",
+       "      <td>724</td>\n",
+       "      <td>284</td>\n",
+       "      <td>834</td>\n",
+       "      <td>429</td>\n",
+       "      <td>664</td>\n",
+       "      <td>543</td>\n",
+       "      <td>758</td>\n",
+       "      <td>604</td>\n",
+       "      <td>493</td>\n",
+       "      <td>482</td>\n",
+       "      <td>570</td>\n",
+       "      <td>929</td>\n",
+       "      <td>668</td>\n",
+       "      <td>574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       surgery    age  hospital_number temp_of_extremities peripheral_pulse  \\\n",
+       "count     1235   1235             1235                1196             1175   \n",
+       "unique       2      2              255                   4                4   \n",
+       "top        yes  adult           529461                cool          reduced   \n",
+       "freq       887   1160               46                 700              724   \n",
+       "\n",
+       "       mucous_membrane capillary_refill_time       pain peristalsis  \\\n",
+       "count             1214                  1229       1191        1215   \n",
+       "unique               6                     3          6           5   \n",
+       "top          pale_pink            less_3_sec  depressed  hypomotile   \n",
+       "freq               284                   834        429         664   \n",
+       "\n",
+       "       abdominal_distention nasogastric_tube nasogastric_reflux  \\\n",
+       "count                  1000              880                883   \n",
+       "unique                    3                2                  3   \n",
+       "top                moderate           slight       more_1_liter   \n",
+       "freq                    543              758                604   \n",
+       "\n",
+       "       rectal_exam_feces        abdomen abdomo_appearance surgical_lesion  \\\n",
+       "count               1045           1022              1187            1235   \n",
+       "unique                 5              5                 3               2   \n",
+       "top               absent  distend_small     serosanguious             yes   \n",
+       "freq                 493            482               570             929   \n",
+       "\n",
+       "       cp_data outcome  \n",
+       "count     1235    1235  \n",
+       "unique       2       3  \n",
+       "top        yes   lived  \n",
+       "freq       668     574  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.describe(include=['O'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1235 entries, 0 to 1234\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   surgery                1235 non-null   object \n",
+      " 1   age                    1235 non-null   object \n",
+      " 2   hospital_number        1235 non-null   object \n",
+      " 3   rectal_temp            1235 non-null   float64\n",
+      " 4   pulse                  1235 non-null   float64\n",
+      " 5   respiratory_rate       1235 non-null   float64\n",
+      " 6   temp_of_extremities    1196 non-null   object \n",
+      " 7   peripheral_pulse       1175 non-null   object \n",
+      " 8   mucous_membrane        1214 non-null   object \n",
+      " 9   capillary_refill_time  1229 non-null   object \n",
+      " 10  pain                   1191 non-null   object \n",
+      " 11  peristalsis            1215 non-null   object \n",
+      " 12  abdominal_distention   1000 non-null   object \n",
+      " 13  nasogastric_tube       880 non-null    object \n",
+      " 14  nasogastric_reflux     883 non-null    object \n",
+      " 15  nasogastric_reflux_ph  1235 non-null   float64\n",
+      " 16  rectal_exam_feces      1045 non-null   object \n",
+      " 17  abdomen                1022 non-null   object \n",
+      " 18  packed_cell_volume     1235 non-null   float64\n",
+      " 19  total_protein          1235 non-null   float64\n",
+      " 20  abdomo_appearance      1187 non-null   object \n",
+      " 21  abdomo_protein         1235 non-null   float64\n",
+      " 22  surgical_lesion        1235 non-null   object \n",
+      " 23  lesion_1               1235 non-null   float64\n",
+      " 24  lesion_2               1235 non-null   float64\n",
+      " 25  lesion_3               1235 non-null   float64\n",
+      " 26  cp_data                1235 non-null   object \n",
+      " 27  outcome                1235 non-null   object \n",
+      "dtypes: float64(10), object(18)\n",
+      "memory usage: 270.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
    ]
   }
  ],
