Imputation for some values

--- a/HealthyHorsesSubmission.ipynb
+++ b/HealthyHorsesSubmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "dtype: int64>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "freq       668     574  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -807,6 +807,108 @@
       " 12  abdominal_distention   1000 non-null   object \n",
       " 13  nasogastric_tube       880 non-null    object \n",
       " 14  nasogastric_reflux     883 non-null    object \n",
+      " 15  nasogastric_reflux_ph  1235 non-null   float64\n",
+      " 16  rectal_exam_feces      1045 non-null   object \n",
+      " 17  abdomen                1022 non-null   object \n",
+      " 18  packed_cell_volume     1235 non-null   float64\n",
+      " 19  total_protein          1235 non-null   float64\n",
+      " 20  abdomo_appearance      1187 non-null   object \n",
+      " 21  abdomo_protein         1235 non-null   float64\n",
+      " 22  surgical_lesion        1235 non-null   object \n",
+      " 23  lesion_1               1235 non-null   float64\n",
+      " 24  lesion_2               1235 non-null   float64\n",
+      " 25  lesion_3               1235 non-null   float64\n",
+      " 26  cp_data                1235 non-null   object \n",
+      " 27  outcome                1235 non-null   object \n",
+      "dtypes: float64(10), object(18)\n",
+      "memory usage: 270.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following missing values will be replaced using imputation with the most common values\n",
+    "\n",
+    "- temp_of_extremities - replace value: cool\n",
+    "- peripheral pulse - replace value: reduced\n",
+    "- mucous_membrane - replace value: pale_pink\n",
+    "- capillary_refill_time - replace value: less_3_sec\n",
+    "- pain - replace value: depressed\n",
+    "- peristalsis - replace value: hypomotile\n",
+    "- nasogastric_tube - replace value: slight\n",
+    "- nasogastric_reflux - replace value: more_1_liter\n",
+    "\n",
+    "This will need to be filled by other means\n",
+    "\n",
+    "- abdominal_distention\n",
+    "- rectal_exam_feces\n",
+    "- abdomen\n",
+    "- abdomo_apperance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace na values imputation\n",
+    "train_data.fillna({'temp_of_extremities': 'cool', \n",
+    "                   'peripheral pulse': 'reduced',\n",
+    "                   'mucous_membrane': 'pale_pink',\n",
+    "                   'capillary_refill_time': 'less_3_sec',\n",
+    "                   'pain': 'depressed',\n",
+    "                   'peristalsis': 'hypomotile',\n",
+    "                   'nasogastric_tube': 'slight',\n",
+    "                   'nasogastric_reflux': 'more_1_liter',\n",
+    "                   }, inplace=True)\n",
+    "\n",
+    "test_data.fillna({'temp_of_extremities': 'cool', \n",
+    "                   'peripheral pulse': 'reduced',\n",
+    "                   'mucous_membrane': 'pale_pink',\n",
+    "                   'capillary_refill_time': 'less_3_sec',\n",
+    "                   'pain': 'depressed',\n",
+    "                   'peristalsis': 'hypomotile',\n",
+    "                   'nasogastric_tube': 'slight',\n",
+    "                   'nasogastric_reflux': 'more_1_liter',\n",
+    "                   }, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1235 entries, 0 to 1234\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   surgery                1235 non-null   object \n",
+      " 1   age                    1235 non-null   object \n",
+      " 2   hospital_number        1235 non-null   object \n",
+      " 3   rectal_temp            1235 non-null   float64\n",
+      " 4   pulse                  1235 non-null   float64\n",
+      " 5   respiratory_rate       1235 non-null   float64\n",
+      " 6   temp_of_extremities    1235 non-null   object \n",
+      " 7   peripheral_pulse       1175 non-null   object \n",
+      " 8   mucous_membrane        1235 non-null   object \n",
+      " 9   capillary_refill_time  1235 non-null   object \n",
+      " 10  pain                   1235 non-null   object \n",
+      " 11  peristalsis            1235 non-null   object \n",
+      " 12  abdominal_distention   1000 non-null   object \n",
+      " 13  nasogastric_tube       1235 non-null   object \n",
+      " 14  nasogastric_reflux     1235 non-null   object \n",
       " 15  nasogastric_reflux_ph  1235 non-null   float64\n",
       " 16  rectal_exam_feces      1045 non-null   object \n",
       " 17  abdomen                1022 non-null   object \n",
